# RustySEO

./: .gitignore  CONTRIBUTING.md  DEEP_CRAWL_CONTEXT_MENU_FEATURE.md  README.md  SETTINGS_REFRESH_IMPROVEMENTS.md  TODO.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflow/: clone.yml
.github/workflows/: clone.yml  main.yml  test.yml  upload.yml
app/: error.tsx  globals.css  greet.tsx  layout.tsx  page.tsx
app/Data/: Menus.ts
app/Hooks/: DecodeURL.tsx  JsonLd.tsx  OpenBrowserWindow.ts  SchemaTest.tsx  taskUtils.tsx  useContentItems.ts  useFilterTableUrl.ts  useTruncation.ts
app/api/chat/: route.ts
app/components/: Cls.tsx  CodeBlock.tsx  CodeBlockSchemaAI.tsx  DomElements.tsx  Fcp.tsx  GooglePreview.tsx  HeadingsTable.tsx  HeadingsTableAI.tsx  Indexation.tsx  LCP.tsx  LongTasks.tsx  NetworkPayloads.tsx  NetworkRequests.tsx  Onboarding.tsx  PageSpeedInsigthsApi.tsx  Performance.tsx  ReadingTime.tsx  Redirects.tsx  RenderBlocking.tsx  ResponseCode.tsx  ServeResponseTime.tsx  SpeedIndex.tsx  TTI.tsx  Tbt.tsx  WordCount.tsx
app/components/Chat/: Chatbar.tsx
app/components/Checklist/: Sections.ts  task-section.tsx  todo-board.tsx
app/components/ui/: Code.tsx  CodeBlock.tsx  ContentSummary.tsx  Footer.tsx  HeadAnalysis.tsx  HeadCode.tsx  ImageAnalysis.tsx  LinkAnalysis.tsx  LongTasksTable.tsx  Menu.tsx  MenuDrawer.tsx  NetworkRequestsTable.tsx  OpenGraphCard.tsx  PageSchemaAI.tsx  PageSchemaTable.tsx  RedirectsTable.tsx  RenderBlockingResources.tsx  RobotsTable.tsx  SubBar.tsx  TagIcon.tsx  ThirdPartyScripts.tsx  Todo.tsx  TodoItem.tsx  TodoItems.tsx  TodoMenu.tsx  TopMenuBar.tsx  TotalByteWeightTable.tsx  VerticalNavBar.tsx
app/crawler/: page.tsx
app/global/: layout.tsx  page.tsx
app/images/: layout.tsx  page.tsx
app/ppc/: layout.tsx  page.tsx
app/serverlogs/: layout.tsx  page.tsx  util.ts
app/sitemaps/: page.tsx
app/topicModeling/: layout.tsx  page.tsx
app/utils/: csvUtils.ts
components/Loader/: Loader.tsx
components/ui/: badge.tsx  button.tsx  calendar.tsx  card.tsx  chart.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  hover-card.tsx  input.tsx  menubar.tsx  pagination.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  sonner.tsx  switch.tsx  table.tsx  tabs.tsx
hooks/: useGSCStatus.ts
lib/: api.ts  invoke.ts  tauri-compat.ts
src-tauri/: .env  .gitignore  2  Cargo.toml  Cross.toml  [object Object]  bulk.db  bulk_results.db  cargo_errors.txt  crawl_results.db  data.db  data.xlsx  marco_rust.xlsx  marco_rust.xslx  measure_core_web_vitals.js  output.xlsx  page_speed_results.json  serverlog.db  sitemap.xml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_preamble.rs  audits_keys.txt  commands.rs  crawler.rs  domain_crawler.rs  gemini.rs  genai.rs  gsc.rs  gsc_auth.rs  lib.rs  logging.rs  main.rs  redirects.rs  schema.rs  server.rs  server_main.rs  sitemaps.rs  users.rs  version.rs
src-tauri/src/chat/: client.rs
src-tauri/src/crawler/: content.rs  db.rs  libs.rs  page_rank.rs  page_rank.rs~
src-tauri/src/crawler/db/: models.rs
src-tauri/src/domain_crawler/: constants.rs  database.rs  domain_commands.rs  domain_crawler.rs  issues_report.rs  mod.rs  models.rs  state.rs  url_processor.rs  user_agents.rs
src-tauri/src/domain_crawler/db/: db_domain.rs  mod.rs
src-tauri/src/domain_crawler/db_deep/: db.rs
src-tauri/src/domain_crawler/excel/: create_xlsx.rs  create_xlsx_main.rs  mod.rs
src-tauri/src/domain_crawler/extractors/: html.rs
src-tauri/src/domain_crawler/helpers/: alt_tags.rs  anchor_links.rs  canonical_selector.rs  check_html_page.rs  cookies.rs  cross_origin.rs  css_selector.rs  domain_checker.rs  extract_url_pattern.rs  favicon.rs  fetch_with_exponential.rs  flesch_reader.rs  headings_selector.rs  headless_fetch.rs  hreflang_selector.rs  html_size_calculator.rs  https_checker.rs  iframe_selector.rs  images_selector.rs  indexability.rs  javascript_selector.rs  keyword_selector.rs  language_selector.rs  links_selector.rs  links_status_code_checker.rs  meta_robots_selector.rs  mobile_checker.rs  mod.rs  ngrams.rs  normalize_url.rs  open_graph.rs  opengraph.rs  page_description.rs  pdf_checker.rs  pdf_selector.rs  robots.rs  schema_selector.rs  sitemap.rs  skip_url.rs  state.rs  (+4 more)
src-tauri/src/domain_crawler/page_speed/: bulk.rs  mod.rs  model.rs  store_key.rs
src-tauri/src/downloads/: csv.rs  excel.rs  google_sheets.rs
src-tauri/src/globals/: actions.rs
src-tauri/src/image_converter/: converter.rs
src-tauri/src/loganalyser/: active_db.rs  analyser.rs  database.rs  log_commands.rs  log_state.rs  mod.rs
src-tauri/src/loganalyser/helpers/: browser_trim_name.rs  check_hostname.rs  country_extractor.rs  crawl_log.rs  crawler_type.rs  google_ip_fetcher.rs  gsc_log.rs  gsc_query_match.rs  mod.rs  modeling.rs  parse_logs.rs
src-tauri/src/machine_learning/: keyword_frequency.rs  mod.rs
src-tauri/src/settings/: settings.rs
src-tauri/src/settings/utils/: agentic_bots.rs  config_checker.rs  indexing_bots.rs  mod.rs  retrieval_agents.rs  user_bots.rs
src-tauri/src/uploads/: storage.rs
src-tauri/src/url_checker/: http_check.rs
src-tauri/tests/: crawler_url_coverage.rs
store/: AIModels.ts  ClarityStore.ts  DiffStore.ts  FixesStore.ts  GA4StatusStore.ts  GSCStatusStore.ts  GSCUploadStore.ts  GlobalConsoleLog.tsx  GlobalCrawlDataStore.ts  KWTrackingStore.ts  OnboardingStore.ts  Panes.ts  RankingInfoStore.ts  ServerLogsGlobalStore.ts  ServerLogsStore.ts  SettingsStore.ts  ShallowStateStore.ts  StorePerformance.ts  TerminalStore.ts  VisibilityStore.ts  loadersStore.ts  logFilterStore.ts  store.ts  storeContent.ts  storeOnPageSeo.ts
types/: ad.ts
utils/: ad-export.ts  ad-import.ts
(+318 files in other folders)
