[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = ["api-all"] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
tokio = { version = "1.26.0", features = ["full"] }
crawler = "*"
scraper = "*"
xml-rs = "*"
url = "2.2"
select = "0.6.0"
dotenv = "0.15.0"
regex = "1.7.0"
html2text = "0.4.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
oauth2 = "4.3.0"
html5ever = "0.25"
markup5ever_rcdom = "0.1"
directories = "5.0"
toml = "0.7"
genai = "=0.1.2"
anyhow = "1.0.70"
chrono = "0.4.26"
csv = "1.2.1"
uuid = "1.3.0"
sysinfo = "0.26.2"
yup-oauth2 = "8.0.0"
hyper = "0.14.26"
hyper-rustls = { version = "0.24", features = ["http2"] }
urlencoding = "2.1"



[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
