[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
trust-dns-resolver = "0.23.2"
once_cell = "1.21.3"
ipnet = "2.5.0"
r2d2 = "0.8"
r2d2_sqlite = "0.28.0"
rust_xlsxwriter = "0.84.0"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
tokio = { version = "1.47.1", features = ["full"] }
scraper = "*"
url = "2.5.7"
dotenv = "0.15.0"
regex = "1.11"
html2text = "0.4.0"
oauth2 = "4.3.0"
html5ever = "0.25"
markup5ever_rcdom = "0.1"
directories = "6.0.0"
toml = "0.9.5"
genai = "=0.1.2"
anyhow = "1.0.70"
chrono = "0.4.26"
csv = "1.2.1"
uuid = "1.3.0"
sysinfo = "0.26.2"
yup-oauth2 = "11.0.0"
hyper = "0.14.26"
hyper-rustls = { version = "0.24", features = ["http2"] }
urlencoding = "2.1"
base64 = "0.22.1"
image = "0.24.1"
actix-web = "4.0"
google-sheets4 = "*"
futures = "*"
rand = "*"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
semver = "1.0.17"
colored = "3.0.0"
thiserror = "2.0.12"
rusqlite = { version = "0.35.0", features = ["bundled"] }
lazy_static = "1.5.0"
moka = { version = "0.12", features = ["future"] }
governor = "0.10.0"
rayon = "1.10.0"
defmt = "1.0.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
